--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "tabWidth": 2,
   "useTabs": false,
   "printWidth": 80,
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "endOfLine": "lf"
 }
