--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "useTabs": false,
   "printWidth": 80,
   "bracketSpacing": true,
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
