--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^7.8.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
+    "zod": "^4.1.5",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
