--- a/.github/workflows/sync_and_deploy.yml
+++ b/.github/workflows/sync_and_deploy.yml
@@ -146,16 +146,16 @@ jobs:
         with:
           fetch-depth: 0
           ref: main
-  
+
       - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-  
+
       - name: Install deps
         run: npm ci
-  
+
       # 환경 동기화 (Production)
       - name: Vercel Pull (production env)
         run: |
@@ -164,8 +164,8 @@ jobs:
           npx vercel pull --environment=production \
             --token ${{ secrets.VERCEL_TOKEN }} \
             --yes
-  
-      # 로컬에서 vercel 방식으로 빌드 (.vercel/output 생성)
+
+      # main 기준으로 새로 빌드
       - name: Vercel Build (local, production)
         run: |
           VERCEL_PROJECT_ID=${{ secrets.VERCEL_PROJECT_ID }} \
@@ -173,13 +173,13 @@ jobs:
           npx vercel build \
             --token ${{ secrets.VERCEL_TOKEN }} \
             --yes
-  
-      # 프리빌트 결과를 프로덕션으로 배포
-      - name: Deploy to Vercel (Production, prebuilt)
+
+      # 프로덕션 배포
+      - name: Deploy to Vercel (Production, dist)
         run: |
           VERCEL_PROJECT_ID=${{ secrets.VERCEL_PROJECT_ID }} \
           VERCEL_ORG_ID=${{ secrets.VERCEL_ORG_ID }} \
-          npx vercel deploy --prebuilt --prod \
+          npx vercel deploy --prod \
             --token ${{ secrets.VERCEL_TOKEN }} \
             --yes \
             --debug
